--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Card Layout</title>
 </head>
 <body>
-    
+    <div class="card">
+        <img class="avatar" id="jmoore-avatar" src="me.jpg" alt="Jordan Moore" />
+        <h1>Jordan Moore</h1>
+        <h2>MI Student at MSU</h2>
+        <ul>
+            <li><a href=""><img src="twitter.png" alt="Twitter"></a></li>
+            <li><a href=""><img src="github.png" alt="GitHub"></a></li>
+            <li><a href=""><img src="email.jpg" alt="Email"></a></li>
+        </ul>
+    </div>
 </body>
 </html>
