--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <ul>
             <li><a href=""><img src="twitter.png" alt="Twitter"></a></li>
             <li><a href=""><img src="github.png" alt="GitHub"></a></li>
-            <li><a href=""><img src="email.jpg" alt="Email"></a></li>
+            <li><a href=""><img src="email.png" alt="Email"></a></li>
         </ul>
     </div>
 </body>
