--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img class="avatar" id="jmoore-avatar" src="me.jpg" alt="Jordan Moore" />
         <h1>Jordan Moore</h1>
         <h2>MI Student at MSU</h2>
-        <ul>
+        <ul class="contacts">
             <li><a href=""><img src="twitter.png" alt="Twitter"></a></li>
             <li><a href=""><img src="github.png" alt="GitHub"></a></li>
             <li><a href=""><img src="email.png" alt="Email"></a></li>
